# my-site

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.circleci/: config.yml
blog/: feeds.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_has_code_snippets.py
blog/services/: errors.py  friendlycaptcha.py
blog/static/blog/css/: content.css  sidebar.css
blog/static/blog/js/: highlight.pack.js
blog/templates/: about.html  base.html  contact.html  experience.html  index.html  invalid_form_verification.html  post_detail.html  thanks.html
mysite/: settings.py
scripts/: install-protonmail-bridge-deb.sh
static/: package-lock.json  package.json
static/css/: content.css  sidebar.css  simple-sidebar.css
