[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Angelos Panagiotopoulos"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
python-dotenv = "^0.15.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pep8-naming = "^0.11.1"
autopep8 = "^1.5.7"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
